--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Discover places that cater for your dietary needs 🍽"
+    />
+    <meta property="og:site_name" content="Food Passport" />
+    <meta property="og:title" content="Food Passport" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:url" content="https://foodpassport.herokuapp.com" />
+    <meta
+      property="og:description"
+      content="Discover places that cater for your dietary needs 🍽"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +35,9 @@
     -->
     <title>Food Passport</title>
     <style>
-      body { background-color: #fafafa !important  }
+      body {
+        background-color: #fafafa !important;
+      }
     </style>
   </head>
 
@@ -44,4 +55,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    console.log(
+      "%cCreated by Gareth Davies - University of Sunderland (2021)",
+      "background: black; color: white; font-size: x-large"
+    );
+  </script>
 </html>
